--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,12 +23,36 @@
       </ul>
     
       <section class="top-bar-section">
+        
         <!-- Left Nav Section -->
         <ul class="left">
+          <li class="divider"></li>
           <li>
             <%= link_to 'Tasks', tasks_path %>
           </li>
         </ul>
+        
+        <!-- Right Nav Section -->
+        <ul class="right">
+          <li class="divider"></li>
+          <% if author_signed_in? %>
+          <li>
+            <%= link_to current_author.first_name+ current_author.last_name, edit_author_registration_path %>
+          </li>
+          <li>
+            <%= link_to 'Log Out', destroy_author_session_path, method: :delete %>
+          </li>
+          <% else %>
+          <li class="active">
+            <%= link_to 'Sign up', new_author_registration_path %>
+          </li>
+          <li>
+            <%= link_to 'Sign in', new_author_session_path %>
+          </li>
+          <% end %>
+        </ul>
+
+        
       </section>
     </nav>
     
