--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -28,4 +28,9 @@
   <%= @task.author.first_name %> <%= @task.author.last_name %>
 </p>
 
+<p>
+  <strong>Finished:</strong>
+  <%= @task.finished %>
+</p>
+
 <%= link_to 'Edit', edit_task_path(@task), class: 'button' %> 
