--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,10 +12,10 @@
             <div class="columns large-9 medium-6">
               <blockquote>
                 <%= task.title %>
-                <cite><%= task.author.first_name%> <%= task.author.last_name %> - <em><%= time_ago_in_words(task.created_at) %> ago</em></cite>
-                <cite>Created:<%= task.created_at %></cite>
-                <cite>End Date:<%= task.end_date %></cite>
-                <cite><%= task.description %></cite>
+                <cite>By <%= task.author.first_name%> <%= task.author.last_name %>
+                <br>
+                End Date:<%= task.end_date %>
+                </em></cite>
               </blockquote>
             </div>
             <div class="columns large-3 medium-6">
@@ -38,10 +38,10 @@
             <div class="columns large-9 medium-6">
               <blockquote>
                 <%= task.title %>
-                <cite><%= task.author.first_name%> <%= task.author.last_name %> - <em><%= time_ago_in_words(task.created_at) %> ago</em></cite>
-                <cite>Created:<%= task.created_at %></cite>
-                <cite>End Date:<%= task.end_date %></cite>
-                <cite><%= task.description %></cite>
+                <cite>By <%= task.author.first_name%> <%= task.author.last_name %>
+                <br>
+                End Date:<%= task.end_date %>
+                </em></cite>
               </blockquote>
             </div>
             <div class="columns large-3 medium-6">
@@ -64,13 +64,13 @@
        <hr>
         <div class="row">
           <div class="columns large-9 medium-6">
-            <blockquote>
-              <%= task.title %>
-              <cite><%= task.author.first_name%> <%= task.author.last_name %> - <em><%= time_ago_in_words(task.created_at) %> ago</em></cite>
-              <cite>Created:<%= task.created_at %></cite>
-              <cite>End Date:<%= task.end_date %></cite>
-              <cite><%= task.description %></cite>
-            </blockquote>
+              <blockquote>
+                <%= task.title %>
+                <cite>By <%= task.author.first_name%> <%= task.author.last_name %>
+                <br>
+                End Date:<%= task.end_date %>
+                </em></cite>
+              </blockquote>
           </div>
           <div class="columns large-3 medium-6">
             <ul class="inline-list">
