--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,9 +8,11 @@
   <%= @task.description %>
 </p>
 
+<!--diff=@task.end_date.to_i - @task.created_at.to_i;
+diff.hours-->
 <p>
   <strong>Duration:</strong>
-  <%= time_ago_in_words(@task.created_at) %> ago
+  Expected to be finished in <%= distance_of_time_in_words(@task.end_date.to_i, @task.created_at.to_i) %> 
 </p>
 
 <p>
